# ctbtool

./: README.md  pyproject.toml
ctbparser/: __init__.py  cli.py  ctbfile.py  parser.py
testdata/: AEC_NCS_4_MONO.ctb  AEC_NCS_4_MONO.txt  NavFacStnd.ctb  NavFacStnd.txt  minimal.txt
