[tool.poetry]
name = "ctbparser"
version = "0.1.0"
description = "Extractor/parser for AutoCAD CTB data"
authors = ["Sean Johnson <me@seanj.dev>"]

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10"
pyparsing = "^3.0.9"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ctbtool = "ctbparser.cli:root"
